# kata

./: README.md  cookiecutter.json
compare-the-triplets/: README.md
fizzbuzz/: README.md
fizzbuzz/go/: main.go  main_test.go
fizzbuzz/python/: main.py  pyproject.toml
food-distribution/: README.md
phone-validator/: README.md
simple-array-sum/: README.md
two_sum/: Makefile  README.md
two_sum/go/: main.go  main_test.go
two_sum/python/: main.py  pyproject.toml
{{cookiecutter.project_slug}}/: README.md
{{cookiecutter.project_slug}}/go/: go.mod  main.go  main_test.go
{{cookiecutter.project_slug}}/python/: main.py  pyproject.toml
